ec2-cluster.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: 'Create an Amazon EC2 instance running the Amazon Linux AMI.'
Parameters:
  KeyName:
    Description: Name of an existing EC2 KeyPair to enable SSH access to the instance
    Type: AWS::EC2::KeyPair::KeyName
    ConstraintDescription: must be the name of an existing EC2 KeyPair.
  InstanceType:
    Description: WebServer EC2 instance type
    Type: String
    Default: t2.micro
    AllowedValues: [t2.nano, t2.micro, t2.small, t2.medium, t2.large, t2.xlarge, t2.2xlarge,
      t3.nano, t3.micro, t3.small, t3.medium, t3.large, t3.xlarge, t3.2xlarge,
      m4.large, m4.xlarge, m4.2xlarge, m4.4xlarge, m4.10xlarge,
      m5.large, m5.xlarge, m5.2xlarge, m5.4xlarge,
      c5.large, c5.xlarge, c5.2xlarge, c5.4xlarge, c5.9xlarge,
      g3.8xlarge,
      r5.large, r5.xlarge, r5.2xlarge, r5.4xlarge, r3.12xlarge,
      i3.xlarge, i3.2xlarge, i3.4xlarge, i3.8xlarge,
      d2.xlarge, d2.2xlarge, d2.4xlarge, d2.8xlarge]
    ConstraintDescription: must be a valid EC2 instance type.
  LaptopIP:
    Description: The IP address range that can be used to SSH to the EC2 instances
    Type: String
    MinLength: 9
    MaxLength: 18
    Default: 0.0.0.0/0
    AllowedPattern: (\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})
    ConstraintDescription: must be a valid IP CIDR range of the form x.x.x.x/x.
  LatestAmiId:
    Type:  'AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>'
    Default: '/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2'
    # Default: '/aws/service/canonical/ubuntu/server/focal/stable/current/amd64/hvm/ebs-gp2/ami-id'
Resources:
  EC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: !Ref 'InstanceType'
      SecurityGroups: [!Ref 'InstanceSecurityGroup']
      KeyName: !Ref 'KeyName'
      ImageId: !Ref 'LatestAmiId'
      Tags:
        - Key: scheduler
          Value: ec2-startstop
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          touch /var/tmp/test
          yum -y update
          date > /home/ec2-user/starttime
          sudo yum update -y aws-cfn-bootstrap
          # Initialize CloudFormation bits
          /opt/aws/bin/cfn-init -v \
            --stack ${AWS::StackName} \
            --resource LaunchConfig
          yum install -y ruby
          yum install -y aws-cli

          ./install auto
          # Install Docker
          yum install docker -y
          systemctl enable docker
          systemctl start docker

          # Run Docker Containers
          docker ps -qa|xargs docker rm -f || true
          [ ! -d "/var/jenkins_home" ] && mkdir "/var/jenkins_home" && chmod 777 "/var/jenkins_home"
          docker run -d -p 8080:8080 -p 50000:50000 --name jenkins -v /var/jenkins_home:/var/jenkins_home jenkins/jenkins:lts
          [ ! -d "/var/ansible" ] && mkdir "/var/ansible" && chmod 777 "/var/ansible"
          docker run -d -p 8052:8052 --name ansible -v /var/ansible:/etc/ansible ansible/awx

          # Configure startup scripts for docker containers
          chmod +x /etc/rc.d/rc.local
          echo 'source /etc/rc.d/clean_docker.sh' >> /etc/rc.d/rc.local
          echo 'source /etc/rc.d/docker_jenkins.sh' >> /etc/rc.d/rc.local
          echo 'source /etc/rc.d/docker_ansible.sh' >> /etc/rc.d/rc.local

          # Clean any existing containers
          echo '#!/usr/bin/env bash' > /etc/rc.d/clean_docker.sh
          echo 'docker ps -qa|xargs  docker rm -f || true' >> /etc/rc.d/clean_docker.sh

          # Jenkins Container
          echo '#!/usr/bin/env bash' > /etc/rc.d/docker_jenkins.sh
          echo '[ ! -d "/var/jenkins_home" ] && mkdir "/var/jenkins_home" && chmod 777 "/var/jenkins_home"' >> /etc/rc.d/docker_jenkins.sh
          echo 'docker run -d -p 8080:8080 -p 50000:50000 --name jenkins -v /var/jenkins_home:/var/jenkins_home jenkins/jenkins:lts' >> /etc/rc.d/docker_jenkins.sh
          
          # Ansible Container
          echo '#!/usr/bin/env bash' > /etc/rc.d/docker_ansible.sh
          echo '[ ! -d "/var/ansible" ] && mkdir "/var/ansible" && chmod 777 "/var/ansible"' >> /etc/rc.d/docker_ansible.sh
          echo 'docker run -d -p 8052:8052 --name ansible -v /var/ansible:/etc/ansible ansible/awx' >> /etc/rc.d/docker_ansible.sh
          
          chmod +x /etc/rc.d/docker_ansible.sh
          chmod +x /etc/rc.d/clean_docker.sh
          chmod +x /etc/rc.d/docker_jenkins.sh

  InstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable SSH access via port 22
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        CidrIp: !Ref 'LaptopIP'
      - IpProtocol: tcp
        FromPort: 8080
        ToPort: 8080
        CidrIp: !Ref 'LaptopIP'
      - IpProtocol: tcp
        FromPort: 50000
        ToPort: 50000
        CidrIp: !Ref 'LaptopIP'
      - IpProtocol: tcp
        FromPort: 8052
        ToPort: 8052
        CidrIp: !Ref 'LaptopIP'

Outputs:
  InstanceId:
    Description: InstanceId of the newly created EC2 instance
    Value: !Ref 'EC2Instance'
  AZ:
    Description: Availability Zone of the newly created EC2 instance
    Value: !GetAtt [EC2Instance, AvailabilityZone]
  PublicDNS:
    Description: Public DNSName of the newly created EC2 instance
    Value: !GetAtt [EC2Instance, PublicDnsName]
  PublicIP:
    Description: Public IP address of the newly created EC2 instance
    Value: !GetAtt [EC2Instance, PublicIp]
